Closed Bug 1900972 Opened 1 year ago Closed 1 year ago

Audio has started playing at a slow speed with mono output (accessibility.monoaudio.enable)

Categories

(Core :: Audio/Video: Playback, defect)

Firefox 127
Unspecified
Linux
defect

Tracking

()

VERIFIED FIXED
129 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox126 --- unaffected
firefox127 + verified
firefox128 + verified
firefox129 + verified

People

(Reporter: ke5trel, Assigned: padenot)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

STR:

  1. Set accessibility.monoaudio.enable = true on Ubuntu 24.04.
  2. Play a youtube video.

Audio is played slowly with low pitch, sounds like half speed.

Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=5e6f6e0723be0759e720d417dd4e2de7817f42d5&tochange=fb10bab6cd18b43ae0bd2ef55de94b9c9db3a3a3

Regressed by Bug 1889978.

:padenot, since you are the author of the regressor, bug 1889978, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Flags: needinfo?(padenot)
Assignee: nobody → padenot
Flags: needinfo?(padenot)

[Tracking Requested - why for this release]: Per Paul, we should consider this for an uplift. accessibility.monoaudio.enable is disabled by default, but may be manually set for accessibility reasons and the fix is likely to be small and low risk.

We could take a fix in the planned dot release.

Fix is absolutely trivial indeed, clearly something we can take in release. It's unfortunately not the easiest thing to test since we're not well setup to test audio output in CI.

Set release status flags based on info from the regressing bug 1889978

Pushed by acseh@mozilla.com: https://hg.mozilla.org/mozilla-central/rev/95aeb046465a Properly pass the channel map instead of the channel count in FFmpegAudioDecoder.cpp. r=pehrsons
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 129 Branch

The patch landed in nightly and beta is affected.
:padenot, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox128 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(padenot)

Comment on attachment 9406409 [details]
Bug 1900972 - Properly pass the channel map instead of the channel count in FFmpegAudioDecoder.cpp. r?#media-playback-reviewers

Beta/Release Uplift Approval Request

  • User impact if declined: An accessibility feature (accessibility.monoaudio.enable, that forces mono playback for all audio) is broken. It's unfortunately hard to write a test for this, but the patch is absolutely trivial.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: Flip the pref: accessibility.monoaudio.enable, check the audio is the same pitch / speed as without the pref flipped (but it shouldn't be stereo anymore).
  • List of other uplifts needed: non
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): We're simply incorrectly specifying a value related to channel layout, there's no risk.
  • String changes made/needed: none
  • Is Android affected?: Yes
Flags: needinfo?(padenot)
Attachment #9406409 - Flags: approval-mozilla-release?
Attachment #9406409 - Flags: approval-mozilla-beta?
Flags: qe-verify+
QA Whiteboard: [qa-triaged]

Comment on attachment 9406409 [details]
Bug 1900972 - Properly pass the channel map instead of the channel count in FFmpegAudioDecoder.cpp. r?#media-playback-reviewers

Approved for 128.0b3.

Attachment #9406409 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

I've reproduced this issue using an affected Nightly build from 2024-06-06, on macOS 14.

The issue is verified as fixed on latest Nightly 129.0a1 and Beta 128.0b3 (treeherder build) running macOS 14, Ubuntu 20.04 and Win 11.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
Duplicate of this bug: 1902913

Comment on attachment 9406409 [details]
Bug 1900972 - Properly pass the channel map instead of the channel count in FFmpegAudioDecoder.cpp. r?#media-playback-reviewers

Approved for 127.0.1, thanks.

Attachment #9406409 - Flags: approval-mozilla-release? → approval-mozilla-release+
Flags: qe-verify+

Verified fixed using Firefox 127.0.1 (20240617164919) on MacOS 14, Windows 10 and Ubuntu 24.04.

QA Whiteboard: [qa-triaged]
Flags: qe-verify+
Duplicate of this bug: 1903520
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: