Bug 1900972 - Properly pass the channel map instead of the channel count in FFmpegAudioDecoder.cpp. r=pehrsons, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D213077